syntax = "proto3";

message LoginRequest { string return_url = 1; }
message LoginChallenge {
  string url = 1;
  string token = 2;
}

message AuthenticateRequest { string token = 1; }
message AuthenticateResponse {
  string username = 1;
  bool success = 2;
}

message GCPTokenRequest { string token = 1; }
message GCPTokenResponse {
  bool success = 1;
  string gcp_token = 2;
  uint64 expiry = 3;
}

service AuthenticationService {
  rpc Login(LoginRequest) returns (LoginChallenge);
  rpc GetGCPToken(GCPTokenRequest) returns (GCPTokenResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}
